# trading-bot

./: .gitignore
algo-trade/: .env.template  .env.test.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  Makefile  README.md  TESTING_GUIDE.md  config.yaml  config.yaml.template  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  run_paper_demo.sh  start.bat
algo-trade/data/: algo_trade.db  positions.json
algo-trade/docs/: HOW_IT_WORKS.md
algo-trade/frontend/: .env.local.example  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
algo-trade/frontend/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
algo-trade/frontend/components/: providers.tsx
algo-trade/frontend/lib/: api.ts  masked-context.ts  utils.ts
algo-trade/sample_data/: minute_sample.csv
algo-trade/scripts/: backtest.py  install_service.ps1  start.ps1  test_fmp_key.py
algo-trade/src/: __init__.py  config.py  config_schema.py  daily_circuit_breaker.py  events.py  market_hours.py  notifier.py  persistence.py
algo-trade/src/api_server/: __init__.py  server.py
algo-trade/src/backtester/: __init__.py  backtester.py
algo-trade/src/cli/: __init__.py  main.py
algo-trade/src/execution/: __init__.py  base.py  mock_adapter.py  order_manager.py  webull_adapter.py
algo-trade/src/indicators/: __init__.py  atr.py  macd.py  (+1 more)
algo-trade/systemd/: algo-trade.service
algo-trade/tests/: __init__.py  conftest.py  test_execution.py  test_indicators.py  test_options_fetcher.py  test_screener.py  test_strategy_engine.py
(+65 files in other folders)
